--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
     "reflect-metadata": "^0.1.13",
